# todolist_django

./: .docker_env_ci  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: action.yaml
bot/: models.py  serializers.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py
bot/tg/: client.py  dc.py  manage_dao.py
core/: admin.py  models.py  urls.py
core/migrations/: 0001_initial.py
core/serializers/: __init__.py  create_user.py  login.py  profile.py  update_password.py
core/views/: __init__.py  login.py  profile_logout.py  registration.py  update_password.py
goals/: admin.py  models.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py  0004_board_boardparticipant.py  0005_goalcategory_board.py  0006_not_nullable_goalcategory_board.py  0007_alter_goalcategory_board.py
goals/permissions/: __init__.py  board.py  category.py  comments.py  goal.py
goals/serializers/: __init__.py  board.py  comments_goal.py  goal.py  goal_category.py
goals/views/: __init__.py  board.py  comments_goal.py  goal.py  goal_category.py
tests/: conftest.py  factories.py  fixtures.py
tests/test_goals/views/board/: create_test.py  delete_test.py  detail_test.py  list_test.py  update.py  update_test.py
tests/test_goals/views/category/: create_test.py  delete_test.py  detail_test.py  list_test.py  update_test.py
tests/test_goals/views/comment/: create_test.py  delete_test.py  detail_test.py  list_test.py  update_test.py
tests/test_goals/views/goal/: create_test.py  delete_test.py  detail_test.py  list_test.py  update_test.py
todolist/: settings.py  urls.py
