[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["khage"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
