[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["khage"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.5"
djangorestframework = "^3.14.0"
social-auth-app-django = "^5.0.0"
django-cors-headers = "^3.13.0"
django-filter = "^22.1"
marshmallow-dataclass = "^8.5.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
autoflake = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
