[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["khage"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.5"
djangorestframework = "^3.14.0"
social-auth-app-django = "^5.0.0"
django-cors-headers = "^3.13.0"
django-filter = "^22.1"
marshmallow-dataclass = "^8.5.11"
requests = "^2.28.2"
drf-spectacular = "^0.25.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
autoflake = "^2.0.0"
pytest-factoryboy = "^2.5.1"
pytest-django = "^4.5.2"
django-stubs = "^1.14.0"
types-requests = "^2.28.11.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = 'True'
check_untyped_defs = 'True'
disallow_any_generics = 'True'
disallow_untyped_calls = 'True'
disallow_untyped_decorators = 'True'
ignore_errors = 'False'
implicit_reexport = 'False'
strict_optional = 'True'
strict_equality = 'True'
no_implicit_optional = 'True'
warn_unused_ignores = 'True'
warn_redundant_casts = 'True'
warn_unused_configs = 'True'
warn_unreachable = 'True'
warn_no_return = 'True'

[tool.django-stubs]
django_settings_module = "todolist.settings"
